--- a/2CSS/3CSS텍스트 스타일.css
+++ b/2CSS/3CSS텍스트 스타일.css
@@ -55,3 +55,59 @@ a{
     color: #000;
     text-decoration: none;
 }
+
+.center{
+    text-align: center;
+}
+.left{
+    text-align: left;
+}
+.right{
+    text-align: right;
+    font-size: 2rem;
+
+}
+
+.lineheight{
+    /* 요소의 테두리 지정 */
+    border: 1px solid black;
+    /* 글자 세로 중앙 정렬 - 한줄 일때만 가능!! */
+    height: 100px;
+    line-height: 100px;
+
+    /* 글자 가운데 정렬 */
+    text-align: center;
+    /* 요소의 크기 지정 */
+    width: 400px;
+    /* 블럭형식인 경우 마진을 auto로 주어
+    가운데 정렬을 할 수 있다 */
+    margin: auto;
+}
+
+.shadow1{
+    /* 그림자 효과
+        가로, 세로, 번짐정도, 색상
+        양수: 오른쪽 아래쪽
+
+        ,로 연결하여 여러개의 그림자를 출력 할 수 있다
+     */
+    text-shadow: 5px 5px 2px #aaa
+                    ,7px 7px 2px yellow;
+    font-size: 2rem;
+}
+
+.shadow2{
+    /* 음수: 왼쪽 위쪽 */
+    text-shadow: -5px -5px 2px red;
+}
+
+.shadow3{
+    text-shadow: 7px -7px 10px #000;
+    font-size: 2rem;
+    font-weight: bold;
+    color: white;
+}
+
+.spacing{
+    letter-spacing: 0.5rem;
+}
